force-app/main/default/objects/Configuration_Category_Detail__c/Configuration_Category_Detail__c.object-meta.xml
<CustomObject>
    <label>Configuration Category Detail</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Category Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>