force-app/main/default/objects/Configuration_Category_Detail__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Configuration Category Details</relationshipLabel>
    <relationshipName>Configuration_Category_Details</relationshipName>
    <type>Lookup</type>
</CustomField>