force-app/main/default/objects/Configuration_Category_Detail__c/fields/Column_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Column_Name_2__c</fullName>
    <label>Column Name 2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>