force-app/main/default/objects/Configuration_Category_Detail__c/fields/Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Name__c</fullName>
    <label>Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>