force-app/main/default/objects/Configuration_Category_Detail__c/fields/Column_Owner__c.field-meta.xml
<CustomField>
    <fullName>Column_Owner__c</fullName>
    <label>Column Owner</label>
    <length>254</length>
    <type>Text</type>
</CustomField>