force-app/main/default/objects/Configuration_Category_Detail__c/fields/Configuration_Category__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Category__c</fullName>
    <label>Configuration Category</label>
    <referenceTo>Conf_Category__c</referenceTo>
    <relationshipName>Category_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>