force-app/main/default/objects/Configuration_Category_Detail__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>