force-app/main/default/objects/Configuration_Category_Detail__c/fields/Tech_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tech_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Configuration Category Details (Tech Owner)</relationshipLabel>
    <relationshipName>Configuration_Category_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>