force-app/main/default/objects/Configuration_Category_Detail__c/fields/Temp_Text_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Temp_Text_Field_1__c</fullName>
    <label>Temp Text Field 1</label>
    <length>254</length>
    <type>Text</type>
</CustomField>