force-app/main/default/objects/Configuration_Category_Detail__c/fields/Total_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Total_Metrics__c</fullName>
    <formula>Configuration_Category__r.Total_Metrics__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Metrics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>